crates/baml-bridge-derive/tests/ui/nested_duplicate_render.stderr
error: duplicate #[render] attribute
 --> tests/ui/nested_duplicate_render.rs:6:5
  |
6 |     #[render(max_string_chars = 10)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
